--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
 
-.header {
+#header {
 font-family: 'Questrial', sans-serif;
 }
