--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,3 +3,28 @@
 #header {
 font-family: 'Questrial', sans-serif;
 }
+
+.navbar {
+        overflow: hidden;
+        background-color: #724B7C;
+      }
+
+      .navbar2 a {
+        float: left;
+        display: block;
+        color: #FFFFFF;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 16px;
+      }
+
+      .navbar2 a:hover {
+        background-color: #FFA2B4;
+        color: #000000;
+      }
+
+      .navbar2 a.active {
+        background-color: #FFFFFF;
+        color: Black;
+      }
