--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,12 +4,12 @@
   font-family: 'Questrial', sans-serif;
 }
 
-.navbar {
+.navdesu {
   overflow: hidden;
   background-color: #A4B4DE;
 }
 
-.navbar a {
+.navdesu a {
   float: left;
   display: block;
   color: #FFFFFF;
@@ -18,12 +18,12 @@
   font-size: 16px;
 }
 
-.navbar a:hover {
+.navdesu a:hover {
   background-color: #7581D0;
   color: #FFFFFF;
 }
 
-.navbar a.active {
+.navdesu a.active {
   background-color: #FFFFFF;
   color: Black;
 }
