--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,12 +4,12 @@
   font-family: 'Questrial', sans-serif;
 }
 
-.navdesu {
+.nav {
   overflow: hidden;
   background-color: #A4B4DE;
 }
 
-.navdesu a {
+.nav a {
   display: block;
   color: #FFFFFF;
   text-align: center;
@@ -18,14 +18,19 @@
   font-size: 16px;
 }
 
-.navdesu a:hover {
+.nav a:hover {
   background-color: #7581D0;
   color: #FFFFFF;
 }
 
-.navdesu a.active {
+.nav a.active {
   background-color: #FFFFFF;
   color: Black;
+}
+
+.jumbotron {
+  height:100%;
+  width:100%;
 }
     
         
