--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,6 +14,7 @@
   color: #FFFFFF;
   text-align: center;
   padding: 14px 16px; 
+  margin: 15px;
   text-decoration: none;
   font-size: 16px;
 }
