--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,7 +14,8 @@
   color: #FFFFFF;
   text-align: center;
   padding: 14px 16px; 
-  margin: 15px;
+  border: 15px;
+  border-color: #EAECEE;
   text-decoration: none;
   font-size: 16px;
 }
