--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,6 +15,7 @@
   text-align: center;
   padding: 14px 16px; 
   border: 15px;
+  border-style: solid;
   border-color: #EAECEE;
   text-decoration: none;
   font-size: 16px;
