--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,10 +36,10 @@
   width:100%;
 }
 
-.row {
-  height: 50%;
+.container {
+  height: 100%;
   width: 100%;
-  background-color: #FFFFFF
 }
     
+
         
