--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,12 +32,12 @@
 }
 
 .jumbotron {
-  height:100%;
+  height: 100vh;
   width:100%;
 }
 
 .container {
-  height: 100%;
+  height: 100vh;
   width: 100%;
 }
     
