--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,11 +34,13 @@
 .jumbotron {
   height: 100vh;
   width:100%;
+  margin-bottom: 0px;
 }
 
 .container {
   height: 100vh;
   width: 100%;
+  margin-bottom: 0px;
 }
     
 
