--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,6 +42,13 @@
   width: 100%;
   margin-bottom: 0px;
 }
-    
+   
+#gdgroup {
+  height: 50vh;
+}
+
+#illgroup {
+  height: 50vh;
+}
 
         
