--- a/stylesheet.css
+++ b/stylesheet.css
@@ -53,6 +53,7 @@ body {
   color: #000000;
   text-align: center;
   font-family: 'Questrial', sans-serif;
+  text-decoration: none;
   top: 300px;
 }
 
