--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,6 +36,26 @@ body {
   color: Black;
 }
 
+.nav2 {
+  overflow:hidden;
+  background-color: #A4B4DE;
+}
+
+.nav2 a {
+  float:left;
+  display: block;
+  color: #FFFFFF;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+.nav2 a:hover {
+  background-color: #422834;
+  color: #FFFFFF;
+}
+
 #mainjumbo {
   height: 100vh;
   width:100%;
