--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
 
 body {
-  background-color: #E7EDF7;
+  background-color: #A6BEE7;
 }
 
 html {
